--- a/frontend/src/components/Register/Register.css
+++ b/frontend/src/components/Register/Register.css
@@ -1,5 +1,6 @@
 .login {
   display: flex;
+  text-decoration: none;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -28,4 +29,8 @@ button {
   font-size: 20px;
   margin-top: 30px;
   text-decoration: none;
+}
+
+.login_link:hover {
+  text-decoration: underline;
 }
