--- a/frontend/src/components/Auth/Auth.module.scss
+++ b/frontend/src/components/Auth/Auth.module.scss
@@ -21,8 +21,10 @@ input {
   font-size: 25px !important;
 }
 
-button {
+.authBtn {
   font-size: 20px !important;
+  margin-top: 30px !important;
+  margin-bottom: 30px !important;
 }
 
 .login_link {
