--- a/frontend/src/components/UserContainer/Recognition/Recognition.module.scss
+++ b/frontend/src/components/UserContainer/Recognition/Recognition.module.scss
@@ -3,23 +3,33 @@
   text-decoration: none;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  // justify-content: center;
   width: 33.3%;
   height: 100%;
   background-color: white;
   border-right: solid 1px;
+  canvas {
+    margin-top: 50px;
+    width: 500px;
+  }
 }
 
 .recordBtns button {
-  margin-top: 50px;
   margin-left: 10px;
 }
 
 .sendAudio {
-  margin-top: 100px;
+  margin-top: 20px;
   display: flex;
 }
 
 .sendAudio button {
   margin-left: 10px;
+}
+
+.recognizedText {
+  font-size: 30px;
+  max-width: 300px;
+  max-height: 300px;
+  word-wrap: break-word;
 }
