--- a/frontend/src/components/UserContainer/Humantic/Humantic.module.scss
+++ b/frontend/src/components/UserContainer/Humantic/Humantic.module.scss
@@ -1,14 +1,21 @@
 .humantic {
   display: flex;
+  margin-top: 20px;
+  margin-left: 20px;
+  text-overflow: hidden;
   text-decoration: none;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   width: 33.3%;
-  height: 100%;
+  max-height: 100%;
   background-color: white;
   border-right: solid 1px;
   button {
-    margin-top: 20px;
+    margin-top: 10px;
+    margin-left: 20px;
+  }
+  .linkedinInfo {
+    font-size: 20px;
   }
 }
