--- a/frontend/src/components/AdminPanel/AdminPanel.module.scss
+++ b/frontend/src/components/AdminPanel/AdminPanel.module.scss
@@ -14,7 +14,8 @@ $white: white;
 }
 
 .user {
-  font-size: 20px;
+  font-size: 25px;
+  color: red;
 }
 
 .user_title {
@@ -27,4 +28,8 @@ $white: white;
     height: 40px;
     margin-top: 15px;
   }
+}
+
+.metrics {
+  margin-top: 100px;
 }
