--- a/frontend/src/components/UserContainer/Recognition/Recognition.module.scss
+++ b/frontend/src/components/UserContainer/Recognition/Recognition.module.scss
@@ -1,35 +1,35 @@
 .record {
   display: flex;
-  text-decoration: none;
   flex-direction: column;
-  align-items: center;
-  // justify-content: center;
-  width: 33.3%;
+  text-decoration: none;
+  width: 66.6%;
   height: 100%;
   background-color: white;
   border-right: solid 1px;
   canvas {
-    margin-top: 50px;
-    width: 500px;
+    width: 600px;
+    margin: 0px 10px 0px 10px;
   }
 }
 
+.record_wrapper {
+  height: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .recordBtns button {
-  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .sendAudio {
-  margin-top: 20px;
   display: flex;
 }
 
 .sendAudio button {
   margin-left: 10px;
+  margin-top: 10px;
+  height: 35px;
 }
 
-.recognizedText {
-  font-size: 30px;
-  max-width: 300px;
-  max-height: 300px;
-  word-wrap: break-word;
-}
