--- a/frontend/src/components/UserContainer/Recognition/RecognitionRow/RecognitionRow.module.scss
+++ b/frontend/src/components/UserContainer/Recognition/RecognitionRow/RecognitionRow.module.scss
@@ -9,3 +9,13 @@
   display: flex;
   justify-content: space-around;
 }
+
+.question {
+  width: 300px;
+  justify-content: start;
+}
+
+.answer {
+  width: 300px;
+  justify-content: start;
+}
