--- a/frontend/src/components/UserContainer/Recognition/Recognition.module.scss
+++ b/frontend/src/components/UserContainer/Recognition/Recognition.module.scss
@@ -1,35 +1,25 @@
 .record {
   display: flex;
   flex-direction: column;
-  text-decoration: none;
   width: 66.6%;
   height: 100%;
-  background-color: white;
   border-right: solid 1px;
+  button {
+    display: block;
+    margin-right: 10px;
+  }
+  audio {
+    padding-right: 30px;
+    outline: none;
+  }
   canvas {
-    width: 600px;
+    max-width: 300px;
     margin: 0px 10px 0px 10px;
   }
 }
 
 .record_wrapper {
-  height: 10%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
-.recordBtns button {
-  margin-right: 10px;
-}
-
-.sendAudio {
-  display: flex;
-}
-
-.sendAudio button {
-  margin-left: 10px;
-  margin-top: 10px;
-  height: 35px;
-}
-
