--- a/frontend/src/components/Auth/Auth.module.scss
+++ b/frontend/src/components/Auth/Auth.module.scss
@@ -12,6 +12,13 @@
   box-shadow: 5px 5px 5px gray;
 }
 
+.wrapper {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
 .textfield {
   height: 100px;
   width: 250px;
