refactor a bit, add sales table

--- a/frontend/src/components/AdminPanelContainer/Pre/Pre.module.scss
+++ b/frontend/src/components/AdminPanelContainer/Pre/Pre.module.scss
@@ -1,11 +1,9 @@
 .pre_section {
-  margin-bottom: 300px; 
+  margin-bottom: 50px;
 }
 
-.table_head {
-  th {
-    font-size: 20px;
-  }
+th {
+  font-size: 25px !important;
 }
 
 tbody {
