--- a/frontend/src/components/UserContainer/Recognition/Recognition.module.scss
+++ b/frontend/src/components/UserContainer/Recognition/Recognition.module.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   width: 66.6%;
   height: 100%;
+  min-width: 1000px;
   border-right: solid 1px;
   button {
     display: block;
