positionate all spinners

--- a/frontend/src/components/AdminPanelContainer/GeneralSection/General.module.scss
+++ b/frontend/src/components/AdminPanelContainer/GeneralSection/General.module.scss
@@ -38,3 +38,12 @@
   margin-left: auto;
   width: 100px;
 }
+
+.users_spinner {
+  max-width: 50px;
+}
+
+.analyzes_spinner {
+  margin-top: 140px;
+  margin-left: 275px;
+}
