--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -5,3 +5,11 @@ $bgcolor: #f2f2f2;
   align-items: center;
   background-color: $bgcolor;
 }
+
+th {
+  font-size: 25px !important;
+}
+
+td {
+  font-size: 20px !important;
+}
